[package]
name = "archway_test_tube"
version = "0.1.0"
edition = "2021"

exclude = ["archway", "test_artifacts"]

[features]
default = []
benchmark = ["plotters", "indicatif", "console"]
wasm-sudo = ["test-tube/wasm-sudo"]

[dependencies]
test-tube = { version = "0.7.0" }
archway-proto = { git = "https://github.com/archway-network/arch3.rs.git", rev = "3551d45" }
pbjson-types = "0.6.0"
prost-types = "0.12.6"
cosmwasm-std = "1.5.5"
prost = "0.12.3"
serde = "1.0"
serde_json = "1.0"
base64 = "0.21.5"
plotters = { version = "0.3.5", optional = true }
indicatif = { version = "0.17.8", optional = true }
console = { version = "0.15.8", optional = true }

[dev-dependencies]
cw1-whitelist = "1.1.2"
cosmwasm-schema = "2.0.1"
#network-wars = { git = "https://github.com/drewstaylor/fomo", features = ["library"] }

[build-dependencies]
bindgen = "0.69.1"